# wolt-sdk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUBLISH_TO_GITHUB.md  README.md  index.js  package.json  pyproject.toml  setup.py
.cursor/rules/: github-actions-verification.mdc  python.mdc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: examples.md
examples/: basic_usage.py  cuisine_analytics.py  monitoring_script.py  wolt_cheat_sheet.md
src/wolt_api_mcp/: __init__.py  client.py  exceptions.py  models.py  server.py
tests/: __init__.py  test_models.py  test_wolt_api.py
wolt_api/: __init__.py  models.py
